--- a/socialPlugin.html
+++ b/socialPlugin.html
@@ -17,10 +17,10 @@
 
 	  <!--comment-->
 	  <!--https://developers.facebook.com/docs/plugins/comments-->
-      
+<div class="fb-comments" data-href="http://riyatsai.github.io/facebook-startkit/socialPlugin.html" data-numposts="5"></div>
 	  <!--page-->
 	  <!--https://developers.facebook.com/docs/plugins/page-plugin-->
-
+<div class="fb-share-button" data-href="http://riyatsai.github.io/facebook-startkit/socialPlugin.html" data-layout="button_count"></div>
     <script src="js/key.js"></script>		   
 	</body>
 </html>
