--- a/socialPlugin.html
+++ b/socialPlugin.html
@@ -20,7 +20,6 @@
 <div class="fb-comments" data-href="http://riyatsai.github.io/facebook-startkit/socialPlugin.html" data-numposts="5"></div>
 	  <!--page-->
 	  <!--https://developers.facebook.com/docs/plugins/page-plugin-->
-<div class="fb-share-button" data-href="http://riyatsai.github.io/facebook-startkit/socialPlugin.html" data-layout="button_count"></div>
-    <script src="js/key.js"></script>		   
+<div class="fb-share-button" data-href="https://www.facebook.com/roseman.hello?fref=nf" data-layout="button_count"></div>    <script src="js/key.js"></script>		   
 	</body>
 </html>
