--- a/socialPlugin.html
+++ b/socialPlugin.html
@@ -20,6 +20,5 @@
 <div class="fb-comments" data-href="http://riyatsai.github.io/facebook-startkit/socialPlugin.html" data-numposts="5"></div>
 	  <!--page-->
 	  <!--https://developers.facebook.com/docs/plugins/page-plugin-->
-<div class="fb-share-button" data-href="https://www.facebook.com/roseman.hello?fref=nf" data-layout="button_count"></div>    <script src="js/key.js"></script>		   
-	</body>
+<div class="fb-page" data-href="https://www.facebook.com/roseman.hello?fref=nf" data-hide-cover="false" data-show-facepile="true" data-show-posts="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/roseman.hello?fref=nf"><a href="https://www.facebook.com/roseman.hello?fref=nf">ROSE x 螺絲一隻筆</a></blockquote></div></div>	</body>
 </html>
