--- a/graphApi.html
+++ b/graphApi.html
@@ -15,7 +15,7 @@
  Parse.initialize("K3s7XFQZflaMu7iwrIFOT4LQ5ol9IJgWwx8nFQ2c", "Vo68aujH9PewsFq9hF4HchzA1Iv0cKNGTozIIxBE");
  window.fbAsyncInit = function() {
  Parse.FacebookUtils.init({ // this line replaces FB.init({
- appId : '{facebook-app-id}', // Facebook App ID
+ appId : '655372501230961', // Facebook App ID
  status : true, // check Facebook Login status
  cookie : true, // enable cookies to allow Parse to access the session
  xfbml : true, // initialize Facebook social plugins on the page
