--- a/graphApi.html
+++ b/graphApi.html
@@ -75,7 +75,7 @@ src="+response.data.url+"crossorigin=\"anonymous\" id=preview1 / >");
  });
 //個⼈資訊
  FB.api('/me',function(response) {
- $('#fbImgView').append("<h1>Welcome ,+(response['gender']=="male"?"Mr. ":"Miss ")
+ $('#fbImgView').append("<h1>Welcome" ,+(response['gender']=="male"?"Mr. ":"Miss ")
 +" "+response['first_name']+"</h1>");
  });
  }
